# frameworks

fluence/: Cargo.toml  fluence.yaml
fluence/.fluence/: docker-compose.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
fluence/.fluence/aqua/: deals.aqua  services.aqua
fluence/.fluence/aqua-dependencies/: package-lock.json
fluence/.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
fluence/src/aqua/: helpers.aqua  main.aqua  services.aqua  types.aqua
fluence/src/compiled-aqua/: main.ts
fluence/src/services/cioKubo/: service.yaml
fluence/src/services/cioKubo/cioKubo/: Cargo.toml  module.yaml
fluence/src/services/cioKubo/curl_effector/: module.yaml
fluence/src/services/cioKubo/ipfs_effector/: module.yaml
fluence/src/services/tfBarChart/: service.yaml
fluence/src/services/tfBarChart/tfBarChart/: Cargo.toml  module.yaml
fluence/src/services/tfCard/: service.yaml
fluence/src/services/tfCard/tfCard/: Cargo.toml  module.yaml
fluence/src/spells/scheduler/: spell.aqua
